--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ $('#re').click(function(){
 
   
   
-  &copy Ahmad Ali 2019
+  <p style="margin-left:300px; font-size:60%"> &copy Ahmad Ali 2019 </p>
 
 
 
