--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@ $('#re').click(function(){
 
   
   
-  <p style="margin-left:300px; font-size:60%"> &copy Ahmad Ali 2019 </p>
+    <p style="margin-left:400px; font-size:60%; margin-top:10px;"> &copy Ahmad Ali 2019 </p>
+
 
 
 
